# llm_updated

./: .gitignore  pyproject.toml  run.sh  setup.sh  train_config.yaml
.github/workflows/: python-app.yml
src/: train.py  train_config.yaml  upload.py
src/data_module/: dataset.py
src/nets/: attention_block.py  attention_head.py  rope.py  swiglu.py  swiglu_mlp.py  transformer.py
src/utils/: hf_upload.py  lr_scheduler.py
