[project]
name = "llm-updated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.19.0",
    "lightning>=2.6.5",
    "torch>=2.12.1",
    "torchao>=0.17.0",
    "transformers>=5.12.1",
]
